--- a/src/main.html
+++ b/src/main.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>BouncerPage</title>
+        <title>MANGAFY</title>
         <link rel="stylesheet" type="text/css" href="data/ms.css">
+        <script type="text/javascript" src="data/chest.json"></script>
         <script type="text/javascript" src="data/mainscript.js"></script>
     </head>
     
     <body>
         <div class="headStrip">
-            <h1>Mangafy</h1>
+            <h1>MANGAFY</h1>
             <p>enjoy your stay!</p>
         </div>
 
         <svg width="100%" height="100%" id="svg" viewBox="0 0 1440 490" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150"><path d="M 0,500 C 0,500 0,250 0,250 C 91.82142857142861,216.39285714285714 183.64285714285722,182.78571428571428 301,196 C 418.3571428571428,209.21428571428572 561.2499999999998,269.25 711,276 C 860.7500000000002,282.75 1017.3571428571429,236.21428571428572 1140,223 C 1262.642857142857,209.78571428571428 1351.3214285714284,229.89285714285714 1440,250 C 1440,250 1440,500 1440,500 Z" stroke="none" stroke-width="0" fill="#fefe00" fill-opacity="1" class="transition-all duration-300 ease-in-out delay-150 path-0"></path></svg>
 
+        <h1 class="featT">Featured Manga</h1>
         <div class="feat" id="feat">
 
         </div>
