added:list,chap buttons, icon, readerrender backend

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
             <div id="enter-env">
                 <h2>Welcome to</h2>
                 <div class="logo">
-                    <h1>Mangafy</h1>
+                    <img src="data/icon.png" alt="">
+                    <p>ANGAFY</p>
                 </div>
                 <a id="enterButton" href="main.html">Enter</a>
             </div>
