--- a/src/list.html
+++ b/src/list.html
@@ -24,19 +24,11 @@
                 </a>
             </nav>
         </header>
-        <div class="headStripR" id="heSt">
-        </div>
 
-        <div class="pageCont" id="pageCont">
+        <div class="list" id="list">
 
         </div>
-
-        <script type="text/javascript" src="data/readerAPI.js" onload="render_setup()"></script>
-
-        <div class="chap-nav">
-            <button onclick="mchap()" id="mcp">Prev Chapter</button>
-            <button onclick="pchap()" id="pcp">Next Chapter</button>
-        </div>
+        <script type="text/javascript" src="data/readerAPI.js" onload="render_list()"></script>
     </body>
 
 </html>
