--- a/src/list.html
+++ b/src/list.html
@@ -16,14 +16,19 @@
                 </a>
                 <div class="read-nav-nav">
                     <a href="main.html">Home</a>
-                    <a href="">Info</a>
+                    <a href="index.html">Info</a>
                     <a href="">news</a>
                 </div>
-                <a href="index.html" class="read-nav-btn">
+                <a href="list.html" class="read-nav-btn">
                     <button>List</button>
                 </a>
             </nav>
         </header>
+
+
+        <div class="list-title">
+            <h1>Our Collection</h1>
+        </div>
 
         <div class="list" id="list">
 
