--- a/src/read.html
+++ b/src/read.html
@@ -16,10 +16,10 @@
                 </a>
                 <div class="read-nav-nav">
                     <a href="main.html">Home</a>
-                    <a href="">Info</a>
+                    <a href="index.html">Info</a>
                     <a href="">news</a>
                 </div>
-                <a href="index.html" class="read-nav-btn">
+                <a href="list.html" class="read-nav-btn">
                     <button>List</button>
                 </a>
             </nav>
